frontend_tests/negative/unused_local/cmd/app/main.go
package main

func main() {
	value := 1
}
